--- a/Evaluacion3P/AppShell.xaml
+++ b/Evaluacion3P/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="Evaluacion3P.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Evaluacion3P"
+    xmlns:local="clr-namespace:Evaluacion3P.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="Evaluacion3P">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <ShellContent Title="Paises" ContentTemplate="{DataTemplate local:PaisPage}" />
+        <ShellContent Title="About" ContentTemplate="{DataTemplate local:AboutPage}" />
+    </TabBar>
 
 </Shell>
